--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>webpage</title>
 </head>
 <body>
-    <h1>Hello everyone</h1>
+    <h1>Hello everyone</h1> 
+    <img src="https://images.hindustantimes.com/img/2021/01/17/1600x900/_43c0205c-402b-11ea-ae56-f909945546d5_1610854731252.jpg     "
     
 </body>
 </html>
