--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <body>
     <h1>Hello everyone</h1> 
     <img src="https://images.hindustantimes.com/img/2021/01/17/1600x900/_43c0205c-402b-11ea-ae56-f909945546d5_1610854731252.jpg     "
+
+    <div>
+        <h2>introduction to icecream</h2>
+        <p >Ice cream is a frozen dessert typically made from milk or cream that has been flavoured with a sweetener, either sugar or an alternative, and a spice, such as cocoa or vanilla, or with fruit, such as strawberries or peaches. Food colouring is sometimes added in addition to stabilizers. </p>
+    </div>
     
 </body>
 </html>
