general information added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h2>introduction to icecream</h2>
         <p >Ice cream is a frozen dessert typically made from milk or cream that has been flavoured with a sweetener, either sugar or an alternative, and a spice, such as cocoa or vanilla, or with fruit, such as strawberries or peaches. Food colouring is sometimes added in addition to stabilizers. </p>
     </div>
-    
+    <div>
+        <h2>general information</h2>
+        <p>type:frozen dessert</p>
+    </div>
 </body>
 </html>
